[gd_scene load_steps=8 format=2]

[ext_resource path="res://player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://nonplayable/Asteroid.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://nonplayable/UFO.tscn" type="PackedScene" id=4]
[ext_resource path="res://hud/Hud.tscn" type="PackedScene" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -145.422, -136.449, 0, 0, 0, 0, 1774.58, -136.449, 0, 0, 0, 0, 1774.58, 943.551, 0, 0, 0, 0, -145.422, 943.551, 0, 0, 0, 0, -145.422, -136.449 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -64, 192, 0, 0, 0, 0, -64, 896 )
}

[node name="Game" type="Node2D"]
script = ExtResource( 3 )
AsteroidScene = ExtResource( 2 )
UfoScene = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 312 )

[node name="AsteroidSpawn" type="Path2D" parent="."]
position = Vector2( 145.422, 136.449 )
curve = SubResource( 1 )

[node name="SpawnLocation" type="PathFollow2D" parent="AsteroidSpawn"]
position = Vector2( -145.422, -136.449 )

[node name="UfoSpawn" type="Path2D" parent="."]
curve = SubResource( 2 )

[node name="SpawnLocation" type="PathFollow2D" parent="UfoSpawn"]
position = Vector2( -64, 192 )
rotation = 1.5708

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="UfoTimer" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 962, 558 )

[node name="Hud" parent="." instance=ExtResource( 5 )]

[connection signal="death" from="Player" to="." method="_on_Player_death"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="UfoTimer" to="." method="_on_UfoTimer_timeout"]
